@@ -1,3 +1,8 @@
+2017-10-23 Riccardo Mottola <rm@gnu.org>
+
+	* DBFileWriter.m
+	Expand compound address fields.
+
 2017-10-22 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m (adjustFormatForField)
